# hack2025

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: ftest.c  ftest.h  model.h
include/glad/: glad.h
src/: dofunctionstuff.c  ftest.c  glad.c  j_work.c  main.c  model  model.c  model.h
src/model.dSYM/Contents/Resources/DWARF/: model
src/model.dSYM/Contents/Resources/Relocations/aarch64/: model.yml
